# pgvector-filtering-investigation

./: .gitignore  README.md  claude.md  example.env.azure  gemini.md  pyproject.toml
data/: wot_dataset.yaml
doc/: CNPG_MONITORING_SETUP.md  CNPG_PGVECTOR_SETUP.md  DATASET.md  execution-guide.md  hnsw-graph.html
doc/plots/: tipping_point_ef100.csv  tipping_point_ef200.csv  tipping_point_ef40.csv  tipping_point_ef400.csv
infrastructure/cnpg-pgvector/: Dockerfile  cluster.yaml
infrastructure/cnpg-pgvector/monitoring/: cnpg-extra-monitoring.yaml  cnpg-podmonitor.yaml  values-prometheus-grafana.yaml
infrastructure/cnpg-pgvector/monitoring/dashboards/: cnpg-pgvector-overview.json
infrastructure/docker/: Dockerfile
kube/: pvc.yaml
kube/charts/benchmark-engine/: Chart.yaml  values.yaml
kube/charts/benchmark-engine/examples/: index-cnpg-pgvector.yaml  insert-cnpg-pgvector-copy.yaml  insert-cnpg-pgvector.yaml  (+1 more)
scripts/: cnpg_filtered_search_diagnosis.py  cnpg_hybrid_search_diagnosis.py  cnpg_planner_tipping_point_all_books.py  ef_search_verification_experiment.py  perf_audit_pgvector_2.5m_wot.sql  plot_article_benchmarks.py  plot_tipping_point_article.py  setup_pgvector.py
src/pgvector/: 01_insert_benchmark.py  01_insert_benchmark_copy.py  02_create_indexes.py  03_retrieval_asyncpg.py  03_retrieval_psycopg2_sync.py  03_retrieval_psycopg3_async.py  03_retrieval_psycopg3_sync.py  common.py
src/shared/: __init__.py  common_utils.py  dataset.py  hybrid_utils.py  logger.py  logger_structlog.py  results_db.py  results_db_async.py  schema_registry.py
(+3 files in other folders)
